Generate the base URL for request using client#base

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "bluebird": "2",
     "create-error": "0.3",
-    "needle": "0.7"
+    "needle": "0.7",
+    "lodash": "2"
   },
   "devDependencies": {
     "chai": "1",
