Provide a client#request method

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-mocha": "1",
     "jshint-stylish": "1",
     "mocha": "1",
-    "sinon": "1"
+    "sinon": "1",
+    "nock": "0.42"
   }
 }
