--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
 - '0.11'
 - '0.10'
+before_script:
+- export PATH="$PATH:$(npm bin)"
+- gulp lint
 deploy:
   provider: npm
   email: bvdrucker@gmail.com
