--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "bluebird": "2",
     "create-error": "0.3",
-    "needle": "clearbit/needle#84d28b5f2c3916db1e7eb84aeaa9d976cc40054b",
+    "needle": "jonluca/needle#378db0e03722311d33f0cedd20bcb605ddceb7d3",
     "lodash": "2"
   },
   "devDependencies": {
